# lol-esports-warehouse

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/lol_esports_warehouse/: config.py  db.py  log_config.py  main.py  scraper.py
src/lol_esports_warehouse/db/: __init__.py  event_dao.py  game_dao.py  league_dao.py  schema.py  team_dao.py
src/lol_esports_warehouse/riot/: __init__.py  client.py  service.py
src/lol_esports_warehouse/riot/schemas/: details.py  event_details.py  leagues.py  schedule.py  teams.py  tournaments.py  window.py
